--- a/todo/templates/todo/index.html
+++ b/todo/templates/todo/index.html
@@ -5,7 +5,7 @@
 		<meta charset="utf-8">
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
-		<title>ToDo App</title>
+		<title>VoN's ToDo App</title>
 
 		<link href="https://fonts.googleapis.com/css?family=Oswald" rel="stylesheet">
 
@@ -65,7 +65,7 @@
 			<footer>
 				<div class="row pad">
 					<div class="col-lg-12 text-center">
-						Copyright &copy; 2019 <strong>ToDo App</strong>
+						Copyright &copy; 2019 <strong>ToDo App || Created by VoN</strong>
 					</div>
 				</div>
 			</footer>
